--- a/packages/sample/hello/package.json
+++ b/packages/sample/hello/package.json
@@ -8,6 +8,15 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "jest": "^27.5.1"
+    "jest": "^27.5.1",
+    "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.59.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "^0.201.1",
+    "@opentelemetry/instrumentation-express": "^0.50.0",
+    "@opentelemetry/instrumentation-http": "^0.201.1",
+    "@opentelemetry/resources": "^2.0.1",
+    "@opentelemetry/sdk-metrics": "^2.0.1",
+    "@opentelemetry/sdk-node": "^0.201.1",
+    "@opentelemetry/sdk-trace-node": "^2.0.1"
   }
 }
