--- a/packages/sample/hello/package.json
+++ b/packages/sample/hello/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "test": "jest --coverage --runInBand --forceExit --verbose false"
   },
-  "dependencies": {},
+  "dependencies": {
+    "dotenv": "^16.5.0"
+  },
   "devDependencies": {
-    "jest": "^27.5.1",
     "@opentelemetry/api": "^1.9.0",
     "@opentelemetry/auto-instrumentations-node": "^0.59.0",
     "@opentelemetry/exporter-trace-otlp-proto": "^0.201.1",
@@ -17,6 +18,7 @@
     "@opentelemetry/resources": "^2.0.1",
     "@opentelemetry/sdk-metrics": "^2.0.1",
     "@opentelemetry/sdk-node": "^0.201.1",
-    "@opentelemetry/sdk-trace-node": "^2.0.1"
+    "@opentelemetry/sdk-trace-node": "^2.0.1",
+    "jest": "^27.5.1"
   }
 }
